# information-security-lab-1

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test.env
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
results/: README.md
src/: config.py  main.py
src/background_tasks/: sheduled_cleaner.py
src/common/: di_container.py
src/controller/routing/: auth.py  cleaner_router.py  crud_router.py
src/controller/schemas/: base.py  mapper.py  schemas.py
src/integration/: db_connection_provider.py
src/integration/repository/: _base.py  base.py  entity.py  publication_repository.py  user_repository.py
src/service/: auth_service.py  crud_service.py  service.py
src/service/generic/: auth_middleware.py  cors.py  logger.py
tests/: conftest.py  simple_test.py
