[project]
name = "information-security-lab-1"
version = "0.1.0"
description = "Лабораторная работа №1 по \"Информационной безопасности\" - Разработка защищенного REST API с интеграцией в CI/CD"
authors = [
    {name = "DiedCloud",email = "fkirill2604@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-json-logger (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
